--- a/.github/workflows/docker-function.yml
+++ b/.github/workflows/docker-function.yml
@@ -25,9 +25,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: 
-        docker pull ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-asynclatest || true;
-        docker build . --file Docker/Dockerfile --cache-from ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-asynclatest --tag ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-async$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER;
-        docker tag ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-asynclatest:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-asynclatest:latest;      
-        docker push ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-async$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER;
-        docker push ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-asynclatest
+        docker pull ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-async:latest || true;
+        docker build . --file Dockerfile --cache-from ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-async:latest --tag ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-async:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER;
+        docker tag ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-async:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-async:latest;      
+        docker push ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-async:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER;
+        docker push ${{ secrets.ACR_LOGIN_SERVER }}/acs-oai-async:latest
         
